# DSA4265_Group7

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  README_metric2.md  pyproject.toml
config/: ingest_manifest.yaml  settings.yaml
config/prompts/: fundamental.yaml  main.yaml  risk.yaml  sentiment.yaml  technical.yaml
demo/: pipeline_demo.py  single_agent_demo.py
models/finbert-mixed-quick/: config.json  mixed_training_summary.json
scripts/: backtest_evaluation.py  build_backtest_dataset.py  download_demo_data.py  download_fred.py  download_hf.py  download_kaggle.py  download_market_data.py  download_sec_filings.py  eval_sentiment.py  evaluate_rag.py  generate_time_series_reports.py  ingest.py  ingest_demo.py  metric4_llm_judge.py  plot_time_series_results.py  run_ablations.sh  run_backtest.py  train_sentiment.py  train_sentiment_mixed.py  tune_sentiment_pipeline.py
src/: artifacts.py  config.py  graph.py  preflight.py  runner.py  schemas.py
src/agents/: base.py  fundamental_agent.py  main_agent.py  risk_agent.py  sentiment_agent.py  technical_agent.py
src/rag/: __init__.py  indexer.py  retriever.py  store.py
src/tools/: __init__.py  agent_tool.py  base_tool.py  date_tool.py  fred_tool.py  indicators_tool.py  market_data_tool.py  mcp_server.py  rag_tool.py  registry.py  sentiment_tool.py
tests/metric2/: financebench_3m_curated.json  financebench_3m_curated_best.json  financebench_3m_curated_latest.json  financebench_original.json  financebench_original_latest.json  financebench_reference.json  financebench_reference_latest.json  finqa_hybrid.json  (+2 more)
(+51 files in other folders)
